Pull up following revision(s) (requested by riastradh in ticket #793):

sys/sys/socket.h: revision 1.132

PR/57871: Haelwenn Monnier: Don't use u_char because it is not defined in with
POSIX_C_SOURCE